--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,52 @@
+@font-face {
+	font-family: "Cafe24SsurroundAir";
+	src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24SsurroundAir.woff")
+		format("woff");
+	font-weight: normal;
+	font-style: normal;
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+	font-family: "Cafe24SsurroundAir";
+	box-sizing: border-box;
+	margin: 0px;
+}
+
+.title-bar {
+	display: flex;
+	justify-content: space-between;
+	height: 24px;
+	background-color: #14a67c;
+	color: white;
+	padding: 8px 4px 8px 4px;
+}
+.win-title {
+	font-size: 24px;
+}
+.control {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100px;
+}
+.title-bar-btn {
+	height: 100%;
+	background-color: #14a67c;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 0px;
+}
+.title-bar-btn:hover {
+	background-color: #44cea7;
+}
+
+.prevent-select {
+	user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+}
+
+.draggable {
+	-webkit-app-region: drag;
 }
