--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
 }
 .win-title {
 	font-size: 24px;
+	padding-left: 10px;
 }
 .control {
 	display: flex;
@@ -44,6 +45,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	border: 0px;
+	cursor: pointer;
 }
 .title-bar-btn:hover {
 	background-color: #44cea7;
@@ -64,6 +66,25 @@ body {
 	justify-content: space-between;
 	height: 740px;
 	padding: 30px;
+}
+
+.add-item-modal-bg {
+	width: 1280px;
+	height: 800px;
+	position: absolute;
+	background-color: #00000077;
+	z-index: 101;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.add-item-modal {
+	width: 600px;
+	height: 500px;
+	background-color: white;
+	z-index: 102;
+	border-radius: 10px;
 }
 
 .list-view {
@@ -109,6 +130,26 @@ body {
 	justify-content: space-around;
 }
 
+.add-item-btn {
+	position: fixed;
+	right: 350px;
+	bottom: 40px;
+	z-index: 100;
+	width: 50px;
+	height: 50px;
+	border-radius: 25px;
+	font-size: 30px;
+	background-color: #ffffffcd;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+}
+.add-item-btn:hover {
+	transform: scale(1.3);
+	transition: 0.5s;
+}
+
 nav {
 	display: flex;
 	flex-direction: column;
@@ -121,7 +162,7 @@ nav {
 
 .month {
 	font-size: 24px;
-	color: black;
+	color: #21886A;
 }
 
 .weeks {
